content, fix bug

--- a/src/app/admin/_metronic/layout/components/aside/aside-menu/aside-menu.component.html
+++ b/src/app/admin/_metronic/layout/components/aside/aside-menu/aside-menu.component.html
@@ -1,230 +1,120 @@
+<!-- Dashboard -->
+<div class="menu-item">
+  <a class="menu-link without-sub" routerLink="/admin/dashboard" routerLinkActive="active"><span class="menu-icon">
+      <span [inlineSVG]="'./assets/media/icons/duotune/art/art002.svg'" class="svg-icon svg-icon-2"></span>
+    </span>
+    <span class="menu-title">Dashboard</span></a>
+</div>
+
 <!-- Agent -->
 <div class="menu-item">
-  <a
-    class="menu-link without-sub"
-    routerLink="/admin/agent"
-    routerLinkActive="active"
-  ><span class="menu-icon">
-      <span
-        [inlineSVG]="'./assets/media/icons/duotune/art/art002.svg'"
-        class="svg-icon svg-icon-2"
-      ></span>
+  <a class="menu-link without-sub" routerLink="/admin/agent" routerLinkActive="active"><span class="menu-icon">
+      <span [inlineSVG]="'./assets/media/icons/duotune/art/art002.svg'" class="svg-icon svg-icon-2"></span>
     </span>
-    <span class="menu-title">Agent</span
-    ></a>
+    <span class="menu-title">Agent</span></a>
 </div>
 
 <!-- Branch -->
 <div class="menu-item">
-  <a
-    class="menu-link without-sub"
-    routerLink="/admin/branch"
-    routerLinkActive="active"
-  ><span class="menu-icon">
-      <span
-        [inlineSVG]="'./assets/media/icons/duotune/art/art002.svg'"
-        class="svg-icon svg-icon-2"
-      ></span>
+  <a class="menu-link without-sub" routerLink="/admin/branch" routerLinkActive="active"><span class="menu-icon">
+      <span [inlineSVG]="'./assets/media/icons/duotune/art/art002.svg'" class="svg-icon svg-icon-2"></span>
     </span>
-    <span class="menu-title">Branch</span
-    ></a>
+    <span class="menu-title">Branch</span></a>
 </div>
 
 <!-- Claim -->
 <div class="menu-item">
-  <a
-    class="menu-link without-sub"
-    routerLink="/admin/claim"
-    routerLinkActive="active"
-  ><span class="menu-icon">
-      <span
-        [inlineSVG]="'./assets/media/icons/duotune/art/art002.svg'"
-        class="svg-icon svg-icon-2"
-      ></span>
+  <a class="menu-link without-sub" routerLink="/admin/claim" routerLinkActive="active"><span class="menu-icon">
+      <span [inlineSVG]="'./assets/media/icons/duotune/art/art002.svg'" class="svg-icon svg-icon-2"></span>
     </span>
-    <span class="menu-title">Claim</span
-    ></a>
+    <span class="menu-title">Claim</span></a>
 </div>
 
 <!-- Credential -->
 <div class="menu-item">
-  <a
-    class="menu-link without-sub"
-    routerLink="/admin/credential"
-    routerLinkActive="active"
-  ><span class="menu-icon">
-      <span
-        [inlineSVG]="'./assets/media/icons/duotune/art/art002.svg'"
-        class="svg-icon svg-icon-2"
-      ></span>
+  <a class="menu-link without-sub" routerLink="/admin/credential" routerLinkActive="active"><span class="menu-icon">
+      <span [inlineSVG]="'./assets/media/icons/duotune/art/art002.svg'" class="svg-icon svg-icon-2"></span>
     </span>
-    <span class="menu-title">Credential</span
-    ></a>
+    <span class="menu-title">Credential</span></a>
 </div>
 
 <!-- Customer -->
 <div class="menu-item">
-  <a
-    class="menu-link without-sub"
-    routerLink="/admin/customer"
-    routerLinkActive="active"
-  ><span class="menu-icon">
-      <span
-        [inlineSVG]="'./assets/media/icons/duotune/art/art002.svg'"
-        class="svg-icon svg-icon-2"
-      ></span>
+  <a class="menu-link without-sub" routerLink="/admin/customer" routerLinkActive="active"><span class="menu-icon">
+      <span [inlineSVG]="'./assets/media/icons/duotune/art/art002.svg'" class="svg-icon svg-icon-2"></span>
     </span>
-    <span class="menu-title">Customer</span
-    ></a>
+    <span class="menu-title">Customer</span></a>
 </div>
 
 <!-- Customer Policy-->
 <div class="menu-item">
-  <a
-    class="menu-link without-sub"
-    routerLink="/admin/customer-policy"
-    routerLinkActive="active"
-  ><span class="menu-icon">
-      <span
-        [inlineSVG]="'./assets/media/icons/duotune/art/art002.svg'"
-        class="svg-icon svg-icon-2"
-      ></span>
+  <a class="menu-link without-sub" routerLink="/admin/customer-policy" routerLinkActive="active"><span
+      class="menu-icon">
+      <span [inlineSVG]="'./assets/media/icons/duotune/art/art002.svg'" class="svg-icon svg-icon-2"></span>
     </span>
-    <span class="menu-title">Customer Policy</span
-    ></a>
+    <span class="menu-title">Customer Policy</span></a>
 </div>
 
 <!-- Insurance Type-->
 <div class="menu-item">
-  <a
-    class="menu-link without-sub"
-    routerLink="/admin/insurance-type"
-    routerLinkActive="active"
-  ><span class="menu-icon">
-      <span
-        [inlineSVG]="'./assets/media/icons/duotune/art/art002.svg'"
-        class="svg-icon svg-icon-2"
-      ></span>
+  <a class="menu-link without-sub" routerLink="/admin/insurance-type" routerLinkActive="active"><span class="menu-icon">
+      <span [inlineSVG]="'./assets/media/icons/duotune/art/art002.svg'" class="svg-icon svg-icon-2"></span>
     </span>
-    <span class="menu-title">Insurance Type</span
-    ></a>
+    <span class="menu-title">Insurance Type</span></a>
 </div>
 
 <!-- Message-->
 <div class="menu-item">
-  <a
-    class="menu-link without-sub"
-    routerLink="/admin/message"
-    routerLinkActive="active"
-  ><span class="menu-icon">
-      <span
-        [inlineSVG]="'./assets/media/icons/duotune/art/art002.svg'"
-        class="svg-icon svg-icon-2"
-      ></span>
+  <a class="menu-link without-sub" routerLink="/admin/message" routerLinkActive="active"><span class="menu-icon">
+      <span [inlineSVG]="'./assets/media/icons/duotune/art/art002.svg'" class="svg-icon svg-icon-2"></span>
     </span>
-    <span class="menu-title">Message</span
-    ></a>
+    <span class="menu-title">Message</span></a>
 </div>
 
 <!-- Policy-->
 <div class="menu-item">
-  <a
-    class="menu-link without-sub"
-    routerLink="/admin/policy"
-    routerLinkActive="active"
-  ><span class="menu-icon">
-      <span
-        [inlineSVG]="'./assets/media/icons/duotune/art/art002.svg'"
-        class="svg-icon svg-icon-2"
-      ></span>
+  <a class="menu-link without-sub" routerLink="/admin/policy" routerLinkActive="active"><span class="menu-icon">
+      <span [inlineSVG]="'./assets/media/icons/duotune/art/art002.svg'" class="svg-icon svg-icon-2"></span>
     </span>
-    <span class="menu-title">Policy</span
-    ></a>
+    <span class="menu-title">Policy</span></a>
 </div>
 
 <!-- Premium Transaction-->
 <div class="menu-item">
-  <a
-    class="menu-link without-sub"
-    routerLink="/admin/premium-transaction"
-    routerLinkActive="active"
-  ><span class="menu-icon">
-      <span
-        [inlineSVG]="'./assets/media/icons/duotune/art/art002.svg'"
-        class="svg-icon svg-icon-2"
-      ></span>
+  <a class="menu-link without-sub" routerLink="/admin/premium-transaction" routerLinkActive="active"><span
+      class="menu-icon">
+      <span [inlineSVG]="'./assets/media/icons/duotune/art/art002.svg'" class="svg-icon svg-icon-2"></span>
     </span>
-    <span class="menu-title">Premium Transaction</span
-    ></a>
+    <span class="menu-title">Premium Transaction</span></a>
 </div>
 
 <!-- Premium Type-->
 <div class="menu-item">
-  <a
-    class="menu-link without-sub"
-    routerLink="/admin/premium-type"
-    routerLinkActive="active"
-  ><span class="menu-icon">
-      <span
-        [inlineSVG]="'./assets/media/icons/duotune/art/art002.svg'"
-        class="svg-icon svg-icon-2"
-      ></span>
+  <a class="menu-link without-sub" routerLink="/admin/premium-type" routerLinkActive="active"><span class="menu-icon">
+      <span [inlineSVG]="'./assets/media/icons/duotune/art/art002.svg'" class="svg-icon svg-icon-2"></span>
     </span>
-    <span class="menu-title">Premium Type</span
-    ></a>
+    <span class="menu-title">Premium Type</span></a>
 </div>
 
 <!-- Role-->
 <div class="menu-item">
-  <a
-    class="menu-link without-sub"
-    routerLink="/admin/role"
-    routerLinkActive="active"
-  ><span class="menu-icon">
-      <span
-        [inlineSVG]="'./assets/media/icons/duotune/art/art002.svg'"
-        class="svg-icon svg-icon-2"
-      ></span>
+  <a class="menu-link without-sub" routerLink="/admin/role" routerLinkActive="active"><span class="menu-icon">
+      <span [inlineSVG]="'./assets/media/icons/duotune/art/art002.svg'" class="svg-icon svg-icon-2"></span>
     </span>
-    <span class="menu-title">Role</span
-    ></a>
+    <span class="menu-title">Role</span></a>
 </div>
 
 <!-- Subscription -->
 <div class="menu-item">
-  <a
-    class="menu-link without-sub"
-    routerLink="/admin/subscription"
-    routerLinkActive="active"
-  ><span class="menu-icon">
-      <span
-        [inlineSVG]="'./assets/media/icons/duotune/art/art002.svg'"
-        class="svg-icon svg-icon-2"
-      ></span>
+  <a class="menu-link without-sub" routerLink="/admin/subscription" routerLinkActive="active"><span class="menu-icon">
+      <span [inlineSVG]="'./assets/media/icons/duotune/art/art002.svg'" class="svg-icon svg-icon-2"></span>
     </span>
-    <span class="menu-title">Subscription</span
-    ></a>
-</div>
-
-<!-- Dashboard -->
-<div class="menu-item">
-  <a
-    class="menu-link without-sub"
-    routerLink="/admin/dashboard"
-    routerLinkActive="active"
-  ><span class="menu-icon">
-      <span
-        [inlineSVG]="'./assets/media/icons/duotune/art/art002.svg'"
-        class="svg-icon svg-icon-2"
-      ></span>
-    </span>
-    <span class="menu-title" translate="MENU.DASHBOARD"></span
-    ></a>
+    <span class="menu-title">Subscription</span></a>
 </div>
 
 
 <!-- Layout builder -->
-<div class="menu-item">
+<!-- <div class="menu-item">
   <a
     class="menu-link without-sub"
     routerLink="/admin/builder"
@@ -236,19 +126,19 @@
       ></span> </span
   ><span class="menu-title">Layout Builder</span></a
   >
-</div>
+</div> -->
 <!-- Separator -->
-<div class="menu-item">
+<!-- <div class="menu-item">
   <div class="menu-content pt-8 pb-2">
     <span class="menu-section text-muted text-uppercase fs-8 ls-1"
     >Crafted</span
     >
   </div>
-</div>
+</div> -->
 
 
 <!-- Pages -->
-<div
+<!-- <div
   class="menu-item menu-accordion"
   data-kt-menu-trigger="click"
   routerLinkActive="here show"
@@ -367,10 +257,10 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 
 <!-- Accounts -->
-<div
+<!-- <div
   class="menu-item menu-accordion"
   data-kt-menu-trigger="click"
   routerLinkActive="here show"
@@ -404,10 +294,10 @@
       >
     </div>
   </div>
-</div>
+</div> -->
 
 <!-- Errors -->
-<div
+<!-- <div
   class="menu-item menu-accordion"
   data-kt-menu-trigger="click"
   routerLinkActive="here show"
@@ -441,10 +331,10 @@
       >
     </div>
   </div>
-</div>
+</div> -->
 
 <!-- Widgets -->
-<div
+<!-- <div
   class="menu-item menu-accordion"
   data-kt-menu-trigger="click"
   routerLinkActive="here show"
@@ -514,17 +404,17 @@
       >
     </div>
   </div>
-</div>
+</div> -->
 
 <!-- Separator -->
-<div class="menu-item">
+<!-- <div class="menu-item">
   <div class="menu-content pt-8 pb-2">
     <span class="menu-section text-muted text-uppercase fs-8 ls-1">Apps</span>
   </div>
-</div>
+</div> -->
 
 <!-- Chat -->
-<div
+<!-- <div
   class="menu-item menu-accordion"
   data-kt-menu-trigger="click"
   routerLinkActive="here show"
@@ -567,17 +457,17 @@
       >
     </div>
   </div>
-</div>
+</div> -->
 
 <!-- Separator -->
-<div class="menu-item">
+<!-- <div class="menu-item">
   <div class="menu-content">
     <div class="separator mx-1 my-4"></div>
   </div>
-</div>
+</div> -->
 
 <!-- Changelog  -->
-<div class="menu-item">
+<!-- <div class="menu-item">
   <a target="_blank" class="menu-link" [href]="appPreviewChangelogUrl">
     <span class="menu-icon">
       <span
@@ -587,4 +477,4 @@
     </span>
     <span class="menu-title">Changelog {{ appAngularVersion }}</span>
   </a>
-</div>
+</div> -->
