--- a/src/app/admin/_metronic/layout/components/aside/aside.component.html
+++ b/src/app/admin/_metronic/layout/components/aside/aside.component.html
@@ -3,21 +3,13 @@
   <!-- begin::Logo -->
   <ng-container *ngIf="asideTheme === 'dark'">
     <a routerLink="/admin/dashboard">
-      <img
-        alt="Logo"
-        class="h-25px logo"
-        src="./assets/media/logos/logo-1-dark.svg"
-      />
+      <img alt="Logo" class="h-25px logo" src="./assets/media/logos/logo-1-dark.svg" />
     </a>
   </ng-container>
 
   <ng-container *ngIf="asideTheme === 'light'">
     <a routerLink="/admin/dashboard">
-      <img
-        alt="Logo"
-        class="h-25px logo"
-        src="./assets//media/logos/logo-1.svg"
-      />
+      <img alt="Logo" class="h-25px logo" src="./assets//media/logos/logo-1.svg" />
     </a>
   </ng-container>
 
@@ -25,18 +17,11 @@
 
   <!-- begin::Aside toggle -->
   <ng-container *ngIf="asideMinimize">
-    <div
-      id="kt_aside_toggle"
-      class="btn btn-icon w-auto px-0 btn-active-color-primary aside-toggle"
-      data-kt-toggle="true"
-      data-kt-toggle-state="active"
-      data-kt-toggle-target="body"
-      data-kt-toggle-name="aside-minimize"
-    >
-      <span
-        [inlineSVG]="'./assets/media/icons/duotune/arrows/arr079.svg'"
-        class="svg-icon svg-icon-1 rotate-180"
-      ></span>
+    <div id="kt_aside_toggle" class="btn btn-icon w-auto px-0 btn-active-color-primary aside-toggle"
+      data-kt-toggle="true" data-kt-toggle-state="active" data-kt-toggle-target="body"
+      data-kt-toggle-name="aside-minimize">
+      <span [inlineSVG]="'./assets/media/icons/duotune/arrows/arr079.svg'"
+        class="svg-icon svg-icon-1 rotate-180"></span>
     </div>
   </ng-container>
   <!-- end::Aside toggler -->
@@ -45,21 +30,11 @@
 
 <!-- begin::Aside menu -->
 <div class="aside-menu flex-column-fluid">
-  <div
-    #ktAsideScroll
-    id="kt_aside_menu_wrapper"
-    class="hover-scroll-overlay-y my-5 my-lg-5"
-    data-kt-scroll="true"
-    data-kt-scroll-activate="{default: false, lg: true}"
-    data-kt-scroll-height="auto"
-    data-kt-scroll-dependencies="#kt_aside_logo, #kt_aside_footer"
-    data-kt-scroll-wrappers="#kt_aside_menu"
-    data-kt-scroll-offset="0"
-  >
-    <div
-      id="#kt_aside_menu"
-      data-kt-menu="true"
-      class="
+  <div #ktAsideScroll id="kt_aside_menu_wrapper" class="hover-scroll-overlay-y my-5 my-lg-5" data-kt-scroll="true"
+    data-kt-scroll-activate="{default: false, lg: true}" data-kt-scroll-height="auto"
+    data-kt-scroll-dependencies="#kt_aside_logo, #kt_aside_footer" data-kt-scroll-wrappers="#kt_aside_menu"
+    data-kt-scroll-offset="0">
+    <div id="#kt_aside_menu" data-kt-menu="true" class="
         menu
         menu-column
         menu-title-gray-800
@@ -67,8 +42,7 @@
         menu-state-icon-primary
         menu-state-bullet-primary
         menu-arrow-gray-500
-      "
-    >
+      ">
       <app-aside-menu id="asideMenu"></app-aside-menu>
     </div>
   </div>
@@ -76,7 +50,7 @@
 <!-- end::Aside menu -->
 
 <!-- begin::Footer -->
-<div class="aside-footer flex-column-auto pt-5 pb-7 px-5" id="kt_aside_footer">
+<!-- <div class="aside-footer flex-column-auto pt-5 pb-7 px-5" id="kt_aside_footer">
   <a
     target="_blank"
     class="btn btn-custom btn-primary w-100"
@@ -92,5 +66,5 @@
       class="svg-icon btn-icon svg-icon-2"
     ></span>
   </a>
-</div>
+</div> -->
 <!-- end::Footer -->
