--- a/src/app/customer/profile/profile.component.html
+++ b/src/app/customer/profile/profile.component.html
@@ -228,7 +228,7 @@
       </div>
     </div>
 
-    <div class="
+    <!-- <div class="
         notice
         d-flex
         bg-light-warning
@@ -251,6 +251,6 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
   </div>
 </div>
