--- a/src/app/user/components/about-us/about-us.component.html
+++ b/src/app/user/components/about-us/about-us.component.html
@@ -12,7 +12,7 @@
   <our-team1></our-team1>
 
   <!-- :: Section 3 -->
-  <call-to-action></call-to-action>
+  <!-- <call-to-action></call-to-action> -->
 
   <!-- :: Map Section -->
   <map></map>
