--- a/src/app/user/elements/nav-bar/nav-bar.component.html
+++ b/src/app/user/elements/nav-bar/nav-bar.component.html
@@ -10,7 +10,7 @@
           <!-- news -->
           <div class="news">
             <span class="stat text-uppercase">new</span>
-            <a [routerLink]="['/health-insurance']">Health Insurance</a>
+            <a [routerLink]="['/']">Health Insurance</a>
           </div>
         </div>
 
