--- a/src/app/customer/components/customer-policy/policy.component.html
+++ b/src/app/customer/components/customer-policy/policy.component.html
@@ -5,7 +5,7 @@
 
 <div class="card card-xl-stretch mb-5 mb-xl-8">
   <!-- begin::Header -->
-  <div class="card-header border-0 pt-5">
+  <!-- <div class="card-header border-0 pt-5">
     <h3 class="card-title align-items-start flex-column">
       <span class="card-label fw-bolder fs-3 mb-1">New Arrivals</span>
       <span class="text-muted mt-1 fw-bold fs-7">Over 500 new products</span>
@@ -16,7 +16,7 @@
         New Member
       </a>
     </div>
-  </div>
+  </div> -->
   <!-- end::Header -->
   <!-- begin::Body -->
   <div class="card-body py-3">
@@ -62,21 +62,21 @@
                 </div>
               </td>
               <td style="width: 200px;">
-                <a href="#" class="text-dark fw-bolder text-hover-primary d-block mb-1 fs-6">
+                <a class="text-dark fw-bolder text-hover-primary d-block mb-1 fs-6">
                   {{item.insuranceName}}
                 </a>
                 <!-- <span class="text-muted fw-bold text-muted d-block fs-7">Paid</span> -->
               </td>
               <td style="width: 200px;">
-                <a href="#" class="text-dark fw-bolder text-hover-primary d-block mb-1 fs-6">
+                <a class="text-dark fw-bolder text-hover-primary d-block mb-1 fs-6">
                   <span class="text-muted fw-bold text-muted ">Start: </span> {{item.startDate | date:'dd/MM/yyyy'}}
                 </a>
-                <a href="#" class="text-dark fw-bolder text-hover-primary d-block mb-1 fs-6">
+                <a class="text-dark fw-bolder text-hover-primary d-block mb-1 fs-6">
                   <span class="text-muted fw-bold text-muted ">End: </span> {{item.endDate | date: 'dd/MM/yyyy'}}
                 </a>
               </td>
               <td>
-                <a href="#" class="text-dark fw-bolder text-hover-primary d-block mb-1 fs-6">
+                <a class="text-dark fw-bolder text-hover-primary d-block mb-1 fs-6">
                   {{item.premiumAmount|number:'1.2-2'}}
                 </a>
                 <span class="text-muted fw-bold text-muted d-block fs-7">{{item.premiumTypeName}}</span>
@@ -101,226 +101,7 @@
             </tr>
           </ng-container>
 
-          <!-- <tr>
-            <td>
-              <div class="d-flex align-items-center">
-                <div class="symbol symbol-50px me-5">
-                  <img src="./assets/media/stock/600x400/img-3.jpg" class="" alt="" />
-                </div>
-                <div class="d-flex justify-content-start flex-column">
-                  <a href="#" class="text-dark fw-bolder text-hover-primary mb-1 fs-6">
-                    Telegram Development
-                  </a>
-                  <span class="text-muted fw-bold text-muted d-block fs-7">
-                    C#, ASP.NET, MS SQL
-                  </span>
-                </div>
-              </div>
-            </td>
-            <td>
-              <a href="#" class="text-dark fw-bolder text-hover-primary d-block mb-1 fs-6">
-                $4,790
-              </a>
-              <span class="text-muted fw-bold text-muted d-block fs-7">Paid</span>
-            </td>
-            <td>
-              <a href="#" class="text-dark fw-bolder text-hover-primary d-block mb-1 fs-6">
-                $240
-              </a>
-              <span class="text-muted fw-bold text-muted d-block fs-7">Rejected</span>
-            </td>
-            <td>
-              <a href="#" class="text-dark fw-bolder text-hover-primary d-block mb-1 fs-6">
-                Chris Thompson
-              </a>
-              <span class="text-muted fw-bold text-muted d-block fs-7">NBA Player</span>
-            </td>
-            <td>
-              <span class="badge badge-light-danger fs-7 fw-bold">In Progress</span>
-            </td>
-            <td class="text-end">
-              <a href="#" class="
-                btn btn-icon btn-bg-light btn-active-color-primary btn-sm
-                me-1
-              ">
-                <span [inlineSVG]="'./assets/media/icons/duotune/general/gen019.svg'" class="svg-icon svg-icon-3"></span>
-              </a>
-              <a href="#" class="
-                btn btn-icon btn-bg-light btn-active-color-primary btn-sm
-                me-1
-              ">
-                <span [inlineSVG]="'./assets/media/icons/duotune/art/art005.svg'" class="svg-icon svg-icon-3"></span>
-              </a>
-              <a href="#" class="btn btn-icon btn-bg-light btn-active-color-primary btn-sm">
-                <span [inlineSVG]="'./assets/media/icons/duotune/general/gen027.svg'" class="svg-icon svg-icon-3"></span>
-              </a>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <div class="d-flex align-items-center">
-                <div class="symbol symbol-50px me-5">
-                  <img src="./assets/media/stock/600x400/img-9.jpg" class="" alt="" />
-                </div>
-                <div class="d-flex justify-content-start flex-column">
-                  <a href="#" class="text-dark fw-bolder text-hover-primary mb-1 fs-6">
-                    Payroll Application
-                  </a>
-                  <span class="text-muted fw-bold text-muted d-block fs-7">
-                    PHP, Laravel, VueJS
-                  </span>
-                </div>
-              </div>
-            </td>
-            <td>
-              <a href="#" class="text-dark fw-bolder text-hover-primary d-block mb-1 fs-6">
-                $4,390
-              </a>
-              <span class="text-muted fw-bold text-muted d-block fs-7">Paid</span>
-            </td>
-            <td>
-              <a href="#" class="text-dark fw-bolder text-hover-primary d-block mb-1 fs-6">
-                $593
-              </a>
-              <span class="text-muted fw-bold text-muted d-block fs-7">Rejected</span>
-            </td>
-            <td>
-              <a href="#" class="text-dark fw-bolder text-hover-primary d-block mb-1 fs-6">
-                Zoey McGee
-              </a>
-              <span class="text-muted fw-bold text-muted d-block fs-7">Ruby Developer</span>
-            </td>
-            <td>
-              <span class="badge badge-light-success fs-7 fw-bold">Success</span>
-            </td>
-            <td class="text-end">
-              <a href="#" class="
-                btn btn-icon btn-bg-light btn-active-color-primary btn-sm
-                me-1
-              ">
-                <span [inlineSVG]="'./assets/media/icons/duotune/general/gen019.svg'" class="svg-icon svg-icon-3"></span>
-              </a>
-              <a href="#" class="
-                btn btn-icon btn-bg-light btn-active-color-primary btn-sm
-                me-1
-              ">
-                <span [inlineSVG]="'./assets/media/icons/duotune/art/art005.svg'" class="svg-icon svg-icon-3"></span>
-              </a>
-              <a href="#" class="btn btn-icon btn-bg-light btn-active-color-primary btn-sm">
-                <span [inlineSVG]="'./assets/media/icons/duotune/general/gen027.svg'" class="svg-icon svg-icon-3"></span>
-              </a>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <div class="d-flex align-items-center">
-                <div class="symbol symbol-50px me-5">
-                  <img src="./assets/media/stock/600x400/img-18.jpg" class="" alt="" />
-                </div>
-                <div class="d-flex justify-content-start flex-column">
-                  <a href="#" class="text-dark fw-bolder text-hover-primary mb-1 fs-6">
-                    HR Management System
-                  </a>
-                  <span class="text-muted fw-bold text-muted d-block fs-7">
-                    Python, PostgreSQL, ReactJS
-                  </span>
-                </div>
-              </div>
-            </td>
-            <td>
-              <a href="#" class="text-dark fw-bolder text-hover-primary d-block mb-1 fs-6">
-                $7,990
-              </a>
-              <span class="text-muted fw-bold text-muted d-block fs-7">Paid</span>
-            </td>
-            <td>
-              <a href="#" class="text-dark fw-bolder text-hover-primary d-block mb-1 fs-6">
-                $980
-              </a>
-              <span class="text-muted fw-bold text-muted d-block fs-7">Rejected</span>
-            </td>
-            <td>
-              <a href="#" class="text-dark fw-bolder text-hover-primary d-block mb-1 fs-6">
-                Brandon Ingram
-              </a>
-              <span class="text-muted fw-bold text-muted d-block fs-7">Insurance</span>
-            </td>
-            <td>
-              <span class="badge badge-light-info fs-7 fw-bold">Rejected</span>
-            </td>
-            <td class="text-end">
-              <a href="#" class="
-                btn btn-icon btn-bg-light btn-active-color-primary btn-sm
-                me-1
-              ">
-                <span [inlineSVG]="'./assets/media/icons/duotune/general/gen019.svg'" class="svg-icon svg-icon-3"></span>
-              </a>
-              <a href="#" class="
-                btn btn-icon btn-bg-light btn-active-color-primary btn-sm
-                me-1
-              ">
-                <span [inlineSVG]="'./assets/media/icons/duotune/art/art005.svg'" class="svg-icon svg-icon-3"></span>
-              </a>
-              <a href="#" class="btn btn-icon btn-bg-light btn-active-color-primary btn-sm">
-                <span [inlineSVG]="'./assets/media/icons/duotune/general/gen027.svg'" class="svg-icon svg-icon-3"></span>
-              </a>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <div class="d-flex align-items-center">
-                <div class="symbol symbol-50px me-5">
-                  <img src="./assets/media/stock/600x400/img-8.jpg" class="" alt="" />
-                </div>
-                <div class="d-flex justify-content-start flex-column">
-                  <a href="#" class="text-dark fw-bolder text-hover-primary mb-1 fs-6">
-                    Telegram Mobile
-                  </a>
-                  <span class="text-muted fw-bold text-muted d-block fs-7">
-                    HTML, JS, ReactJS
-                  </span>
-                </div>
-              </div>
-            </td>
-            <td>
-              <a href="#" class="text-dark fw-bolder text-hover-primary d-block mb-1 fs-6">
-                $5,790
-              </a>
-              <span class="text-muted fw-bold text-muted d-block fs-7">Paid</span>
-            </td>
-            <td>
-              <a href="#" class="text-dark fw-bolder text-hover-primary d-block mb-1 fs-6">
-                $750
-              </a>
-              <span class="text-muted fw-bold text-muted d-block fs-7">Rejected</span>
-            </td>
-            <td>
-              <a href="#" class="text-dark fw-bolder text-hover-primary d-block mb-1 fs-6">
-                Natali Trump
-              </a>
-              <span class="text-muted fw-bold text-muted d-block fs-7">Insurance</span>
-            </td>
-            <td>
-              <span class="badge badge-light-warning fs-7 fw-bold">Approved</span>
-            </td>
-            <td class="text-end">
-              <a href="#" class="
-                btn btn-icon btn-bg-light btn-active-color-primary btn-sm
-                me-1
-              ">
-                <span [inlineSVG]="'./assets/media/icons/duotune/general/gen019.svg'" class="svg-icon svg-icon-3"></span>
-              </a>
-              <a href="#" class="
-                btn btn-icon btn-bg-light btn-active-color-primary btn-sm
-                me-1
-              ">
-                <span [inlineSVG]="'./assets/media/icons/duotune/art/art005.svg'" class="svg-icon svg-icon-3"></span>
-              </a>
-              <a href="#" class="btn btn-icon btn-bg-light btn-active-color-primary btn-sm">
-                <span [inlineSVG]="'./assets/media/icons/duotune/general/gen027.svg'" class="svg-icon svg-icon-3"></span>
-              </a>
-            </td>
-          </tr> -->
+
         </tbody>
         <!-- end::Table body -->
       </table>
