--- a/src/app/customer/components/layout/components/aside/aside.component.html
+++ b/src/app/customer/components/layout/components/aside/aside.component.html
@@ -54,12 +54,12 @@
 <!-- end::Aside menu -->
 
 <!-- begin::Footer -->
-<div class="aside-footer flex-column-auto pt-5 pb-7 px-5" id="kt_aside_footer">
+<!-- <div class="aside-footer flex-column-auto pt-5 pb-7 px-5" id="kt_aside_footer">
   <a target="_blank" class="btn btn-custom btn-primary w-100" [href]="appPreviewDocsUrl" data-bs-toggle="tooltip"
     data-bs-trigger="hover" data-bs-dismiss-="click"
     ngbDropdown="Check out the complete documentation with over 100 components">
     <span class="btn-label">Docs & Components</span>
     <span [inlineSVG]="'./assets/media/icons/duotune/general/gen005.svg'" class="svg-icon btn-icon svg-icon-2"></span>
   </a>
-</div>
+</div> -->
 <!-- end::Footer -->
