--- a/src/app/user/elements/about-us-header/about-us-header.component.html
+++ b/src/app/user/elements/about-us-header/about-us-header.component.html
@@ -1,22 +1,21 @@
 <header class="position-relative">
-    <div class="container">
-        <!-- contain -->
-        <div class="contain position-relative text-xl-left text-md-center text-left">
-            <h1 class="mb-4 text-uppercase">About us</h1>
-            <p class="mb-0">Insuranto is a leading insurance company. Since our founding in 2003, Insuranto
-                has
-                continually innovated new ways to deliver on our mission: to empower people to fully harness the
-                web.</p>
-            <img src="../../../../assets/user/images/pages/about-us/header/man.png"
-                 class="img-fluid position-absolute float-img d-xl-block d-none" alt="man">
+  <div class="container">
+    <!-- contain -->
+    <div class="contain position-relative text-xl-left text-md-center text-left">
+      <h1 class="mb-4 text-uppercase">About us</h1>
+      <p class="mb-0">Our people are our most important asset, so we have created an environment where creativity,
+        inclusion and innovation have a real impact. In attracting top talent, and engaging and retaining our employees,
+        we strive to be a global employer of choice.</p>
+      <img src="../../../../assets/user/images/pages/about-us/header/man.png"
+        class="img-fluid position-absolute float-img d-xl-block d-none" alt="man">
 
-        </div>
-        <!-- Shapes -->
-        <div class="shapes position-absolute w-100 h-100">
-            <div class="shape shape-1"></div>
-            <div class="shape shape-2"></div>
-            <div class="shape shape-3"></div>
-            <div class="shape shape-4"></div>
-        </div>
     </div>
+    <!-- Shapes -->
+    <div class="shapes position-absolute w-100 h-100">
+      <div class="shape shape-1"></div>
+      <div class="shape shape-2"></div>
+      <div class="shape shape-3"></div>
+      <div class="shape shape-4"></div>
+    </div>
+  </div>
 </header>
